fix bug of moving icon on small device

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -68,7 +68,7 @@
   margin-bottom: 0;
 }
 
-.icon-session {
+.icon-search {
  color: white;
  opacity: 0.7;
  &:hover {
@@ -135,21 +135,21 @@
     margin-left: 0.5rem;
     margin-right: 0.5rem;
   }
-  .navbar-mlight {
-  padding: 20px 30px;
-  }
+  // .navbar-mlight {
+  // padding: 20px 30px;
+  // }
 }
 
 
-.active-pink input.form-control[type=text] {
-  // border-bottom: 1px solid white;
-  border-top: 1px solid transparent;
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
-  background-color: transparent;
-  color: white;
-  box-shadow: 0 1px 0 0 white;
-}
+// .active-pink input.form-control[type=text] {
+//   // border-bottom: 1px solid white;
+//   border-top: 1px solid transparent;
+//   border-left: 1px solid transparent;
+//   border-right: 1px solid transparent;
+//   background-color: transparent;
+//   color: white;
+//   box-shadow: 0 1px 0 0 white;
+// }
 
 input#search-input {
   // margin-bottom: 15px;
