--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -52,7 +52,4 @@ a:hover {
  .cards {
     grid-template-columns: 1fr;
   }
-  input#search-input {
-    padding-bottom: 10px;
-  }
 }
